--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -17,7 +17,7 @@ phases:
       - export IMAGE_TAG=build-`echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}'`
       - AWS_ACCOUNT_ID=`echo $CODEBUILD_BUILD_ARN | awk -F":" '{print $5}'`
       - ECR_REPO=$AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/$IMAGE_REPO_NAME
-      - aws ecr get-login --no-include-email
+      - aws ecr get-login-password
   build:
       commands:
       - echo Build started on `date`
