--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -10,14 +10,10 @@ phases:
       - echo Logging in to Amazon ECR...
   pre_build:
       commands:
-      - ls
-      - pwd
       - cd $CODEBUILD_SRC_DIR
-      - export APP_VERSION=$PROJECT_VERSION.$CODEBUILD_BUILD_NUMBER
-      - export IMAGE_TAG=build-`echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}'`
       - AWS_ACCOUNT_ID=`echo $CODEBUILD_BUILD_ARN | awk -F":" '{print $5}'`
-      - ECR_REPO=$AWS_ACCOUNT_ID.dkr.ecr.us-east-1.amazonaws.com/$IMAGE_REPO_NAME
-      - $(aws ecr get-login-password)
+      - ECR_REPO=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME
+      - $(aws ecr get-login --no-include-email)
   build:
       commands:
       - echo Build started on `date`
