--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -13,7 +13,7 @@ phases:
       - cd $CODEBUILD_SRC_DIR
       - export APP_VERSION=$PROJECT_VERSION.$CODEBUILD_BUILD_NUMBER
       - AWS_ACCOUNT_ID=`echo $CODEBUILD_BUILD_ARN | awk -F":" '{print $5}'`
-      - ECR_REPO=public.ecr.aws/l8j2o4v2/codebuild_env_poc
+      - ECR_REPO=
       - $(aws ecr get-login --no-include-email)
   build:
       commands:
